remove Stream for unification