@@ -18,6 +18,7 @@
 
 package grakn.core.logic.resolvable;
 
+import grakn.core.common.iterator.Iterators;
 import grakn.core.common.parameters.Arguments;
 import grakn.core.concept.Concept;
 import grakn.core.concept.ConceptManager;
@@ -121,9 +122,9 @@ public class UnifyAttributeConcludableTest {
     }
 
     private IsaConstraint findIsaConstraint(Conjunction conjunction) {
-        List<IsaConstraint> isas = conjunction.variables().stream().flatMap(var -> var.constraints().stream())
+        List<IsaConstraint> isas = Iterators.iterate(conjunction.variables()).flatMap(var -> Iterators.iterate(var.constraints()))
                 .filter(constraint -> constraint.isThing() && constraint.asThing().isIsa())
-                .map(constraint -> constraint.asThing().asIsa()).collect(Collectors.toList());
+                .map(constraint -> constraint.asThing().asIsa()).toList();
         assert isas.size() == 1 : "More than 1 isa constraint in conjunction to search";
         return isas.get(0);
     }
@@ -141,7 +142,7 @@ public class UnifyAttributeConcludableTest {
         IsaConstraint thenHasNameIsa = findIsaConstraint(thenHasNameJohn);
         Rule.Conclusion.Isa hasIsaConclusion = Rule.Conclusion.Isa.create(thenHasNameIsa, whenHasName.variables()); // TODO this will become a Has conclusion
 
-        List<Unifier> unifiers = queryConcludable.unify(hasIsaConclusion, conceptMgr).collect(Collectors.toList());
+        List<Unifier> unifiers = queryConcludable.unify(hasIsaConclusion, conceptMgr).toList();
         assertEquals(1, unifiers.size());
         Unifier unifier = unifiers.get(0);
         Map<String, Set<String>> result = getStringMapping(unifier.mapping());
@@ -199,7 +200,7 @@ public class UnifyAttributeConcludableTest {
         IsaConstraint thenHasNameIsa = findIsaConstraint(thenHasNameJohn);
         Rule.Conclusion.Isa hasIsaConclusion = Rule.Conclusion.Isa.create(thenHasNameIsa, whenHasName.variables()); // TODO refactor in new structure
 
-        List<Unifier> unifiers = queryConcludable.unify(hasIsaConclusion, conceptMgr).collect(Collectors.toList());
+        List<Unifier> unifiers = queryConcludable.unify(hasIsaConclusion, conceptMgr).toList();
         assertEquals(1, unifiers.size());
         Unifier unifier = unifiers.get(0);
         Map<String, Set<String>> result = getStringMapping(unifier.mapping());
@@ -219,7 +220,7 @@ public class UnifyAttributeConcludableTest {
         IsaConstraint thenEmploymentIsa = findIsaConstraint(thenExactRelation);
         Rule.Conclusion.Isa relationIsaExactConclusion = Rule.Conclusion.Isa.create(thenEmploymentIsa, whenExactRelation.variables());
 
-        unifiers = queryConcludable.unify(relationIsaExactConclusion, conceptMgr).collect(Collectors.toList());
+        unifiers = queryConcludable.unify(relationIsaExactConclusion, conceptMgr).toList();
         assertEquals(0, unifiers.size());
     }
 
